--- a/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormPersonalDetail.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormPersonalDetail.cshtml
@@ -62,10 +62,31 @@
                                                                             <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Vui lòng nhập thông tin" disabled>
                                                                         </td>
                                                                     </tr>
+                                                                    foreach (var itemss in Model.Where(c => c.Category.category_of_id == items.category_id).ToList())
+                                                                    {
+                                                                        
+                                                                        i++;
 
+                                                                        <tr>
+                                                                            <td class="text-center" style="width:3%">
+                                                                                @(i)
+                                                                            </td>
+                                                                            <td>
+                                                                                @itemss.Category.category_content
+                                                                            </td>
+                                                                        </tr>
+                                                                        <tr>
+                                                                            <td>
+                                                                            </td>
+                                                                            <td>
+                                                                                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Vui lòng nhập thông tin" disabled>
+                                                                            </td>
+                                                                        </tr>
+
+                                                                    }
                                                                 }
                                                             }
-                                                            </tbody>
+                                                        </tbody>
                                                         </table>
                                                 </div>
                                             </div>
