--- a/MonthlyStatement/Areas/Admin/Views/Index.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Index.cshtml
@@ -1,178 +1,110 @@
-﻿<style>
-    * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-        font-family: "Poppins",sans-serif;
-    }
-
-    .body {
-        background-color: #fff;
-    }
-
-    .container {
-        width: 97%;
-        transform: translateX(-50%);
-        left: 50%;
-        margin: 5px 0;
-        top: 120px;
-        background-color: #082c5c;
-        position: absolute;
-        box-shadow: 0 20px 40px rgba(0,0,0,0.2);
-    }
-
-    .tabs {
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
-    }
-
-    h3 {
-        background-color: #e4e9fd;
-        text-align: center;
-        padding: 15px 0;
-        cursor: pointer;
-        font-weight: 600;
-    }
-
-    .tab-content {
-        background-color: #fff;
-        padding: 50px 40px;
-    }
-
-        .tab-content h4 {
-            font-size: 28px;
-            margin-bottom: 20px;
-            color: #000224;
-            font-family: 600;
-        }
-
-        .tab-content p {
-            text-align: justify;
-            line-height: 2;
-            color: #202238;
-            letter-spacing: 0.8px;
-            grid-template-columns: 1.3fr 6fr 0.5fr;
-            box-shadow: 0 25px 45px rgba(0, 0, 0, 0.10);
-            background-color: beige;
-            border-radius: 10px;
-            padding: 20px;
-        }
-
-
-        .tab-content div {
-            display: none;
-        }
-
-        .tab-content .active {
-            display: block;
-        }
-
-    .tabs .active {
-        background-color: #fff;
-        color: #4d5bf9;
-    }
-
-
-    form input {
-        display: block;
-        width: 100%;
-        margin: 4px 0;
-        padding: 8px 15px;
-        font-size: 15px;
-        border: 1px solid beige;
-        font-family: "Lato",sans-serif;
-        outline: none;
-    }
-
-    .submit-section {
-        background: #e4e9fd;
-        width: 100%;
-        margin: 4px 0;
-        padding: 8px 15px;
-        outline: none;
-    }
-
-        .submit-section button {
-            background: #082c5c;
-            padding: 10px 40px;
-            display: block;
-            text-transform: uppercase;
-            outline: none;
-            font-size: 25px;
-            box-shadow: 0 0 1px #000;
-            margin: 0 auto;
-        }
-
-
-</style>
-<section class="section " style="padding: 30px">
+﻿@{ Layout = "~/Views/Shared/_Layout.cshtml"; }
+@{
+    ViewBag.Title = "Index";
+}
+<section class="section">
     <div class="section-body">
         <div class="row">
             <div class="col-12">
                 <div class="card-body">
                     <div class="card">
-                        <div class="card-header bg-primary" style="height:96px">
-                            <h4 class="text-white" style="font-size:1.7rem">Thông Báo</h4>
+                        <div class="card-header bg-primary" style="height:85px;padding:15px">
+                            <h4 class="text-white" style="font-size:1.7rem">Thống kê</h4>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="chartCard">
+            <div class="chartBox">
+                <canvas id="myChart"></canvas>
+            </div>
+        </div>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
+        <script>
+            // setup
+            const data = {
+                labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
+                datasets: [{
+                    label: 'Giảng viên',
+                    data: [15, 20, 25, 40, 45, 50, 55, 60, 65, 70, 80, 100],
+                    backgroundColor: [
+                        'rgba(255, 26, 104, 0.2)',
 
-                    <div class="container">
+                    ],
 
-                        <div class="tabs">
-                            <h3 class="active">All</h3>
-                            <h3>Report</h3>
-                            <h3>Comment</h3>
-                        </div>
-                        <div class="tab-content">
-                            <div class="active">
-                                <h4>Notification</h4>
-                                <p>Hoàn thành báo cáo tháng 10:01/10/2023-23/10/2023</p>
+                    borderWidth: 1
+                }, {
+                    label: 'Bộ môn',
+                    data: [15, 20, 25, 40, 45, 50, 55, 60, 65, 70, 80, 100],
+                    backgroundColor: [
 
-                            </div>
-                            <div>
-                                <h4 style="text-align: center;">Notification</h4>
-                                <form id="form-1">
-                                    <input type="text" placeholder="Enter Emai">
-                                    <input type="text" placeholder="Enter Title">
-                                    <input type="text" placeholder="Enter Decripton">
-                                </form>
+                        'rgba(54, 162, 235, 0.2)',
 
-                                <button type="button" class="submit-section">Send</button>
+                    ],
 
+                }
 
+                ]
+            };
 
-                            </div>
+            // config
+            const config = {
+                type: 'bar',
+                data,
+                options: {
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        }
+                    }
+                }
+            };
 
-                            <div>
-                                <h4 style="text-align: center">Notification</h4>
-                                <form id="form-1">
-                                    <input type="text" placeholder="Enter Title">
-                                    <input type="text" placeholder="Enter Decripton">
-                                </form>
-                                <button type="button" class="submit-section">Send</button>
-                            </div>
+            // render init block
+            const myChart = new Chart(
+                document.getElementById('myChart'),
+                config
+            );
 
+            // Instantly assign Chart.js version
+            const chartVersion = document.getElementById('chartVersion');
+            chartVersion.innerText = Chart.version;
 
-                        </div>
-                    </div>
+        </script>
+        </section>
+        <style>
+           
 
-                    </body>
+            .chartMenu {
+                width: 100vw;
+                height: 40px;
+                background: #1A1A1A;
+               
+            }
 
-                    </html>
-                    <script>
-                        let tabs = document.querySelectorAll(".tabs h3");
-                        let tabContents = document.querySelectorAll(".tab-content div");
-                        tabs.forEach((tab, NOF) => {
-                            tab.addEventListener("click", () => {
-                                tabContents.forEach((content) => {
-                                    content.classList.remove("active");
-                                });
-                                tabs.forEach((tab) => {
-                                    tab.classList.remove("active");
-                                });
-                                tabContents[NOF].classList.add("active");
-                                tabs[NOF].classList.add("active");
-                            });
-                        });
-                    </script>
-</section>
+                .chartMenu p {
+                    padding: 15px;
+                    font-size: 20px;
+                }
+
+            .chartCard {
+                width: 100vw;
+                height: calc(100vh - 40px);
+                
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .chartBox {
+                max-width: 79%;
+                max-height:150%;
+              
+               
+                transform: translateX(-10%);
+                padding: 20px;
+                border-radius: 20px;
+                background: white;
+            }
+        </style>
