--- a/MonthlyStatement/Views/Account/Login.cshtml
+++ b/MonthlyStatement/Views/Account/Login.cshtml
@@ -73,7 +73,7 @@
         <div class="bg-img">
         </div>
         <div class="center">
-            <h2><img src="~/assets/img/vlu/logo2.png" alt=""><br> MONTHLY STATEMENT</h2>
+            <h2><img src="~/assets/img/vlu/LGVL.png" alt=""><br> MONTHLY STATEMENT</h2>
             <form method="post">
                 <div class="signup_link" style="margin: 5px 0; text-align: center; font-size: 16px; color: #666666">
                     Signup with mail VLU
