--- a/MonthlyStatement/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/MonthlyStatement/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -24,7 +24,7 @@
                     {
                         <div class="form-group">
                             <div class="text-center col-md-12">
-                                <button style="border: 1px solid; background: #d92626; border-radius: 25px; " type="submit" class="btn btn-danger px-4 py-2 text-uppercase white font-small-4 box-shadow-2 border-0" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Đăng nhập bằng tài khoản Văn Lang">VLU Login</button>
+                                <button style="width: 100%; height: 50px;border: 1px solid; background: #d92626; border-radius: 25px; " type="submit" class="btn btn-danger px-4 py-2 text-uppercase white font-small-4 box-shadow-2 border-0" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Đăng nhập bằng tài khoản Văn Lang">VLU Login</button>
                             </div>
                         </div>
                     }
