--- a/MonthlyStatement/Views/Shared/_Layout.cshtml
+++ b/MonthlyStatement/Views/Shared/_Layout.cshtml
@@ -61,8 +61,8 @@
                                     <li><a class="nav-link" href="@Url.Action("Index", "ListReportPersonal", new { Area = "Admin" })">Cá nhân</a></li>
                                 </ul>
                             </li>
-                            <li class="dropdown">
-                                <a href="#" class="nav-linkn"><i data-feather="bar-chart"></i><span>Thống kê</span></a>
+                            <li  class=@(ViewBag.Title == "Thống kê" ? "active" : "nav-item")>
+                                <a href="@Url.Action("Index", "Statistical", new { Area = "Admin" })" class="nav-linkn"><i data-feather="bar-chart"></i><span>Thống kê</span></a>
                             </li>
                         </ul>
                     }
