--- a/MonthlyStatement/Areas/Admin/Views/Statistical/Index.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Statistical/Index.cshtml
@@ -1,25 +1,95 @@
-﻿
+﻿@{ Layout = "~/Views/Shared/_Layout.cshtml"; }
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Index";
 }
-
-<link rel='shortcut icon' type='image/x-icon' href='assets/img/favicon.ico' />
-
-
 <section class="section">
     <div class="section-body">
         <div class="row">
             <div class="col-12">
-                <div class="card">
-                    <div class="card-header bg-primary" style="height:100px">
-                        <h3 class="text-white" style="font-size:1.75rem">Thống kê</h3>
-                    </div>
-                    <div class="card-body">
+                <div class="card-body">
+                    <div class="card">
+                        <div class="card-header bg-primary" style="height:85px;padding:15px">
+                            <h4 class="text-white" style="font-size:1.7rem">Thống kê</h4>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+        <div class="chartCard">
+            <div class="chartBox">
+                <canvas id="myChart"></canvas>
+            </div>
+        </div>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
+        <script>
+            // setup
+            const data = {
+                labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
+                datasets: [{
+                    label: 'Giảng viên',
+                    data: [15, 20, 25, 40, 45, 50, 55, 60, 65, 70, 80, 100],
+                    backgroundColor: [
+                        'rgba(255, 26, 104, 0.2)',
+                    ],
+                    borderWidth: 1
+                }, {
+                    label: 'Bộ môn',
+                    data: [15, 20, 25, 40, 45, 50, 55, 60, 65, 70, 80, 100],
+                    backgroundColor: [
+                        'rgba(54, 162, 235, 0.2)',
+                    ],
+                }
+                ]
+            };
+            // config
+            const config = {
+                type: 'bar',
+                data,
+                options: {
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        }
+                    }
+                }
+            };
+            // render init block
+            const myChart = new Chart(
+                document.getElementById('myChart'),
+                config
+            );
+            // Instantly assign Chart.js version
+            const chartVersion = document.getElementById('chartVersion');
+            chartVersion.innerText = Chart.version;
+        </script>
 </section>
+<style>
 
-<svg id="SvgjsSvg1001" width="2" height="0" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:svgjs="http://svgjs.com/svgjs" style="overflow: hidden; top: -100%; left: -100%; position: absolute; opacity: 0;"><defs id="SvgjsDefs1002"></defs><polyline id="SvgjsPolyline1003" points="0,0"></polyline><path id="SvgjsPath1004" d="M-1 249.348L-1 249.348C-1 249.348 153.84014423076923 249.348 153.84014423076923 249.348C153.84014423076923 249.348 256.4002403846154 249.348 256.4002403846154 249.348C256.4002403846154 249.348 358.96033653846155 249.348 358.96033653846155 249.348C358.96033653846155 249.348 461.5204326923077 249.348 461.5204326923077 249.348C461.5204326923077 249.348 564.0805288461538 249.348 564.0805288461538 249.348C564.0805288461538 249.348 666.640625 249.348 666.640625 249.348C666.640625 249.348 666.640625 249.348 666.640625 249.348 "></path></svg>
+    .chartMenu {
+        width: 100vw;
+        height: 40px;
+        background: #1A1A1A;
+    }
+
+        .chartMenu p {
+            padding: 15px;
+            font-size: 20px;
+        }
+
+    .chartCard {
+        width: 100vw;
+        height: calc(100vh - 40px);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .chartBox {
+        max-width: 79%;
+        max-height: 150%;
+        transform: translateX(-10%);
+        padding: 20px;
+        border-radius: 20px;
+        background: white;
+    }
+</style>
