--- a/MonthlyStatement/Areas/Admin/Views/Statistical/Index.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Statistical/Index.cshtml
@@ -8,88 +8,140 @@
             <div class="col-12">
                 <div class="card-body">
                     <div class="card">
-                        <div class="card-header bg-primary" style="height:85px;padding:15px">
+                        <div class="card-header bg-primary" style="height: 100px">
                             <h4 class="text-white" style="font-size:1.7rem">Thống kê</h4>
                         </div>
+
                     </div>
                 </div>
             </div>
         </div>
-        <div class="chartCard">
-            <div class="chartBox">
-                <canvas id="myChart"></canvas>
-            </div>
+    </div>
+    <div class="chartCard">
+        <div class="chartBox">
+            <canvas id="myChart"></canvas>
+            <canvas id="myChart2"></canvas>
         </div>
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
-        <script>
-            // setup
-            const data = {
-                labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
-                datasets: [{
-                    label: 'Giảng viên',
-                    data: [15, 20, 25, 40, 45, 50, 55, 60, 65, 70, 80, 100],
-                    backgroundColor: [
-                        'rgba(255, 26, 104, 0.2)',
-                    ],
-                    borderWidth: 1
-                }, {
-                    label: 'Bộ môn',
-                    data: [15, 20, 25, 40, 45, 50, 55, 60, 65, 70, 80, 100],
-                    backgroundColor: [
-                        'rgba(54, 162, 235, 0.2)',
-                    ],
-                }
-                ]
-            };
-            // config
-            const config = {
-                type: 'bar',
-                data,
-                options: {
-                    scales: {
-                        y: {
-                            beginAtZero: true
-                        }
+    </div>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js"></script>
+    <script>
+        // setup
+        const data = {
+            labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
+            datasets: [{
+                label: 'Giảng viên',
+                data: [15, 20, 25, 40, 45, 50, 55, 60, 65, 70, 80, 100],
+                backgroundColor: [
+                    'rgba(255, 26, 104, 0.2)',
+                ],
+                borderWidth: 1
+            }, {
+                label: 'Bộ môn',
+                data: [15, 20, 25, 40, 45, 50, 55, 60, 65, 70, 80, 100],
+                backgroundColor: [
+                    'rgba(54, 162, 235, 0.2)',
+                ],
+            }
+            ]
+        };
+
+        // config
+        const config = {
+            type: 'bar',
+            data,
+            options: {
+                scales: {
+                    y: {
+                        beginAtZero: true
                     }
                 }
-            };
-            // render init block
-            const myChart = new Chart(
-                document.getElementById('myChart'),
-                config
-            );
-            // Instantly assign Chart.js version
-            const chartVersion = document.getElementById('chartVersion');
-            chartVersion.innerText = Chart.version;
-        </script>
+            }
+        };
+
+        // render init block
+        const myChart = new Chart(
+            document.getElementById('myChart'),
+            config
+        );
+        //chart 2
+        // setup
+        const data2 = {
+            labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
+            datasets: [{
+                label: 'Báo cáo',
+                data: [15, 20, 25, 40, 45, 50, 55, 60, 65, 70, 80, 100],
+                backgroundColor:
+
+                    'rgba(0, 0, 0, 0.2)'
+                ,
+                borderColor:
+                    'rgba(0, 0, 0, 1)'
+                ,
+                borderWidth: 1
+            }]
+        };
+
+        // config
+        const config2 = {
+            type: 'bar',
+            data: data2,
+            options: {
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            }
+        };
+
+        // render init block
+        const myChart2 = new Chart(
+            document.getElementById('myChart2'),
+            config2
+        );
+        // Instantly assign Chart.js version
+        const chartVersion = document.getElementById('chartVersion');
+        chartVersion.innerText = Chart.version;
+    </script>
+
 </section>
 <style>
+    * {
+        margin: 0;
+        padding: 0;
+        font-family: sans-serif;
+    }
 
     .chartMenu {
         width: 100vw;
         height: 40px;
-        background: #1A1A1A;
+      
     }
 
         .chartMenu p {
-            padding: 15px;
+            padding: 10px;
             font-size: 20px;
         }
 
     .chartCard {
         width: 100vw;
         height: calc(100vh - 40px);
+       
         display: flex;
         align-items: center;
         justify-content: center;
     }
 
     .chartBox {
-        max-width: 79%;
-        max-height: 150%;
-        transform: translateX(-10%);
+       width: 70%;
         padding: 20px;
         border-radius: 20px;
+       transform:translateX(-10%);
         background: white;
     }
 </style>
+
+
+
+
