Fix code Notification

--- a/MonthlyStatement/Areas/Admin/Views/ListReportPersonal/Detail.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ListReportPersonal/Detail.cshtml
@@ -9,8 +9,8 @@
 
     CP25Team04Entities models = new CP25Team04Entities();
     int idperiod = Model.report_period_id;
+    int idpersonalreport = Model.personal_report_id;
 
-    
 }
 
 <section class="section">
@@ -106,7 +106,9 @@
                                                 <textarea class="form-control" name="CommentText" style="height:200px !important"></textarea>
                                             </div>
                                             <div class="text-right mt-3">
-                                                <button class="btn btn-primary" type="submit">Gửi</button>
+                                                <button class="btn btn-primary" type="submit">
+                                                    Gửi
+                                                </button>
                                             </div>
                                         }
                                     </div>
