--- a/MonthlyStatement/Views/Shared/_NavBarPartialView.cshtml
+++ b/MonthlyStatement/Views/Shared/_NavBarPartialView.cshtml
@@ -1,14 +1,6 @@
-﻿
-@{
+﻿@{
     string avt = "";
-    if (Session["Avt"] != null)
-    {
-        avt = Session["Avt"].ToString();
-    }
-    else
-    {
-        avt = "~/assets/img/user.png";
-    }
+    avt = "~/assets/img/user.png";
 }
 
 <nav class="navbar navbar-expand-lg main-navbar sticky">
@@ -33,29 +25,13 @@
             </a>
             <div class="dropdown-menu dropdown-list dropdown-menu-right pullDown">
                 <div class="dropdown-header">
-                    Notifications
-                    
-                </div>
-                <div class="dropdown-list-content dropdown-list-icons">
-                    <a href="#" class="dropdown-item dropdown-item-unread">
-                        <span class="dropdown-item-icon bg-primary text-white">
-                            <i class="fas
-												fa-code"></i>
-                        </span> <span class="dropdown-item-desc">
-                            Template update is
-                            available now! <span class="time">
-                                2 Min
-                                Ago
-                            </span>
-                        </span>
-                    </a>
+                    Thông báo
                 </div>
                 <div class="dropdown-footer text-center">
-                    <a href="~/Areas/Admin/Views/Nofication.html">View All <i class="fas fa-chevron-right"></i></a>
+                    <a href="">Xem tất cả<i class="fas fa-chevron-right"></i></a>
                 </div>
             </div>
         </li>
-
         <li class="dropdown">
             <a href="#" data-toggle="dropdown"
                class="nav-link dropdown-toggle nav-link-lg nav-link-user">
@@ -64,37 +40,35 @@
             <div class="dropdown-menu dropdown-menu-right pullDown">
                 <a href="@Url.Action("Index", "Profile",new { Area = "" })" class="dropdown-item has-icon">
                     <i class="far fa-user"> </i>
-                    Profile
+                    Hồ sơ
                 </a>
                 @*<a href="timeline.html" class="dropdown-item has-icon">
-                        <i class="fas fa-bolt"></i>
-                        Activities
-                    </a>
-                    <a href="#" class="dropdown-item has-icon">
-                        <i class="fas fa-cog"></i>
-                        Settings
-                    </a>*@
+                    <i class="fas fa-bolt"></i>
+                    activities
+                </a>
+                <a href="#" class="dropdown-item has-icon">
+                    <i class="fas fa-cog"></i>
+                    settings
+                </a>*@
                 <div class="dropdown-divider"></div>
                 @using (@Html.BeginForm("SignOut", "Account", new { Area = "" }, FormMethod.Post, new { id = "logoutForm" }))
                 {
                     <a href="javascript:document.getElementById('logoutForm').submit()" class="dropdown-item has-icon text-danger"><i class="ft-power mr-2"></i><span>Đăng xuất</span></a>
                 }
             </div>
+
         </li>
         <li>
             <div>
-                @if (Session["name_user"] != null)
-                {
-                    <p>
-                        @Session["name_user"].ToString()
-                    </p>
-                }
-                @if (Session["role_user"] != null)
-                {
-                    <p>
-                        @Session["role_user"].ToString()
-                    </p>
-                }               
+                @User.Identity.Name
+            </div>
+            <div>
+                Vai trò:
+                @(User.IsInRole("Quản trị viên") ? "Quản trị viên" :
+                User.IsInRole("Ban phòng khoa" )? "Ban phòng khoa" :
+                User.IsInRole("Thư ký") ? "Thư ký" :
+                User.IsInRole("Bộ môn") ? "Bộ môn" :
+                User.IsInRole("Nhân viên - Giảng viên") ? "Nhân viên - Giảng viên" : "Chưa cấp quyền")
             </div>
         </li>
     </ul>
