--- a/MonthlyStatement/Views/Shared/_Layout.cshtml
+++ b/MonthlyStatement/Views/Shared/_Layout.cshtml
@@ -66,7 +66,7 @@
                             </li>
                         </ul>
                     }
-                    else if (User.IsInRole("Nhân viên - Giảng viên"))
+                    else if (User.IsInRole("Giảng viên"))
                     {
                         <ul class="sidebar-menu">
                             <li class=@(ViewBag.Title == "Quản lý báo báo" ? "active" : "nav-item")>
@@ -78,6 +78,21 @@
                             <li class="dropdown">
                             <li class=@(ViewBag.Title == "Thống kê" ? "active" : "nav-item")>
                                 <a href="@Url.Action("Index", "Static", new { Area = "Personal" })" class="nav-link"><i data-feather="briefcase"></i><span>Thống kê</span></a>
+                            </li>
+                        </ul>
+                    }
+                    else if (User.IsInRole("Giảng viên"))
+                    {
+                        <ul class="sidebar-menu">
+                            <li class=@(ViewBag.Title == "Quản lý báo báo" ? "active" : "nav-item")>
+                                <a href="@Url.Action("Staff", "Report", new { Area = "Staff" })" class="nav-link"><i data-feather="file"></i><span>Quản lý báo cáo</span></a>
+                            </li>
+                            <li class=@(ViewBag.Title == "Quản lý biểu mẫu" ? "active" : "nav-item")>
+                                <a href="@Url.Action("Index", "FormReport", new { Area = "Staff" })" class="nav-link"><i data-feather="edit"></i><span>Quản lý biểu mẫu</span></a>
+                            </li>
+                            <li class="dropdown">
+                            <li class=@(ViewBag.Title == "Thống kê" ? "active" : "nav-item")>
+                                <a href="@Url.Action("Index", "Static", new { Area = "Staff" })" class="nav-link"><i data-feather="briefcase"></i><span>Thống kê</span></a>
                             </li>
                         </ul>
                     }
