Update add user faculty

--- a/MonthlyStatement/Areas/Admin/Views/ListReportDepartment/Index.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ListReportDepartment/Index.cshtml
@@ -52,7 +52,18 @@
                                             </td>
 
                                             <td>
-                                                <div class="badge badge-success">@item.status</div>
+                                                @if (item.status == "Đã báo cáo")
+                                                {
+                                                    <div class="badge badge-success">@item.status</div>
+                                                }
+                                                else if (item.status == "Trễ báo cáo")
+                                                {
+                                                    <div class="badge badge-warning">@item.status</div>
+                                                }
+                                                else
+                                                {
+                                                    <div class="badge badge-danger">@item.status</div>
+                                                }
                                             </td>
                                             <td class="text-center">
                                                 <div class="buttons">
