--- a/MonthlyStatement/Areas/Admin/Views/Accounts/Edit.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Accounts/Edit.cshtml
@@ -20,7 +20,7 @@
                                 <div class="card-header"><b>Thông tin chi tiết</b></div>
                                 <!-- Form Group (Email)-->
                                 <div class="col-md-6">
-                                    <label class="small mb-1">Vai trò</label>
+                                    <label class="small mb-1">Email</label>
                                     @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
 
                                 </div>
@@ -29,6 +29,10 @@
                                 <div class="col-md-6">
                                     <label class="small mb-1">Vai trò</label>
                                     @Html.DropDownList("role_id", null, htmlAttributes: new { @class = "form-control" })
+                                </div>
+                                <div class="col-md-6">
+                                    <label class="small mb-1">Khoa</label>
+                                    @Html.DropDownList("role_faculty", null, htmlAttributes: new { @class = "form-control" })
                                 </div>
                                 <div style="text-align: center; margin-top:1.8rem" class="mb-3">
                                     <button style="width:180px; color:white" type="submit" class="btn btn-primary">
