--- a/MonthlyStatement/Areas/Admin/Views/ListReportDepartment/Detail.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ListReportDepartment/Detail.cshtml
@@ -98,7 +98,7 @@
 
                                         <hr />
                                         <h4>Viết bình luận .... <span class="fas fa-pen" style="font-size:1.2rem"></span></h4>
-                                        @using (Html.BeginForm("PostComment", "Comments", FormMethod.Post))
+                                        @using (Html.BeginForm("PostCommentDepartment", "Comments", FormMethod.Post))
                                         {
                                             <input type="hidden" name="id" value="@idDepartmentReport" />
                                             <div class="form-group">
