--- a/MonthlyStatement/Views/Shared/_Layout.cshtml
+++ b/MonthlyStatement/Views/Shared/_Layout.cshtml
@@ -81,7 +81,7 @@
                             </li>
                         </ul>
                     }
-                    else if (User.IsInRole("Giảng viên"))
+                    else if (User.IsInRole("Nhân viên"))
                     {
                         <ul class="sidebar-menu">
                             <li class=@(ViewBag.Title == "Quản lý báo báo" ? "active" : "nav-item")>
